# zerocopy-serialization

./: .gitignore  .gitmodules  README.md
benchmark_tests/: CMakeLists.txt  benchmark-multi-threaded.cpp  lf-bench-mth.cpp  lf-slist-test.cpp  vec-deque-iterate.cpp
include/lock_free_allocator/: lf_slist.h  lowlockqueue.h  slab_allocator.h
include/mutex_allocator/: single_allocator.h
old-slab-allocator/: CMakeLists.txt  README.md  compile.sh  mallocator.cpp
old-slab-allocator/benchmark_tests/: benchmark-single-threaded.cpp
old-slab-allocator/include/lock_free_allocator/: lf_stack.h  single_allocator.h  slab.h  slab_allocator.h
old-slab-allocator/include/mutex_allocator/: slab.h  slab_allocator.h
old-slab-allocator/tests/: iterator-validity.cpp  multi-threaded.cpp
old-slab-allocator/unit_tests/: CMakeLists.txt  slab2.test.cpp
tests/: containers.cpp  iterator-validity2.cpp  lf-allocator-test.cpp  lf-stack.cpp  pseudo-serialization.cpp  single-threaded.cpp
vector-slab-allocator/: CMakeLists.txt  README.md  compile.sh  new_slab.h  slab.h  slab_allocator.h  test.cpp  test2.cpp  test_containers.cpp  test_defs.h
vector-slab-allocator/fancy-ptr/: CMakeLists.txt  README.md  main.cpp  main2.cpp
vector-slab-allocator/fancy-ptr/include/: FancyPointer.h  SequentialAllocator.h  config.h  fancy_pointer.h  slab_lookup_table.h
vector-slab-allocator/include/: fancy_pointer.h  lockfreequeue.h  slab.h  slab_allocator.h  slab_lookup_table.h  test_defs.h
vector-slab-allocator/tests/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test_allocator1.cpp  test_allocator2.cpp  test_allocator3.cpp  test_allocator4.cpp  test_concurrency1.cpp  test_containers.cpp  test_integration1.cpp  test_integration2.cpp  test_integration3.cpp  test_integration4.cpp
